--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,51 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
+    <th:block th:each="job : ${jobs}">
+
+        <table class="job-listing">
+
+            <tbody>
+
+            <tr>
+                <th>ID</th>
+
+                <td th:text="${job.id}"></td>
+            </tr>
+            <tr>
+                <th>NAME</th>
+
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <th>EMPLOYER</th>
+
+                <td th:text="${job.employer}"></td>
+            </tr>
+
+            <tr>
+                <th>LOCATION</th>
+
+                <td th:text="${job.location}"></td>
+
+            </tr>
+            <tr>
+                <th>POSITION</th>
+
+                <td th:text="${job.positionType}"></td>
+            </tr>
+            <tr>
+                <th>SKILL</th>
+
+                <td th:text="${job.coreCompetency}"></td>
+            </tr>
+
+            </tbody>
+
+
+        </table>
+    </th:block>
+
 
 </div>
 
