--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,8 +37,50 @@
     <hr />
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
-    
+    <th:block th:each="job : ${jobs}">
 
+        <table class="job-listing">
+
+            <tbody>
+
+            <tr>
+                <th>ID</th>
+
+                <td th:text="${job.id}"></td>
+            </tr>
+            <tr>
+                <th>NAME</th>
+
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <th>EMPLOYER</th>
+
+                <td th:text="${job.employer}"></td>
+            </tr>
+
+            <tr>
+                <th>LOCATION</th>
+
+                <td th:text="${job.location}"></td>
+
+            </tr>
+            <tr>
+                <th>POSITION</th>
+
+                <td th:text="${job.positionType}"></td>
+            </tr>
+            <tr>
+                <th>SKILL</th>
+
+                <td th:text="${job.coreCompetency}"></td>
+            </tr>
+
+            </tbody>
+
+
+        </table>
+    </th:block>
 </div>
 
 </body>
